syntax="proto3";

package pcbook.pbfiles;
option go_package=".;pb";

import "laptop_msg.proto";
import "filter_msg.proto";

message CreateLaptopRequest {Laptop laptop = 1;}

message CreateLaptopResponse {string id = 1;}

message SearchLaptopRequest {Filter filter = 1;}

message SearchLaptopResponse {Laptop laptop = 1;}

message UploadImageRequest {
  oneof data { // 这里使用oneof字段，因为第一个请求仅包含元数据
    ImageInfo info = 1;
    bytes chunk_data = 2;
  }
}

message ImageInfo {
  string laptop_id = 1;
  string image_type = 2; // .jpg .png
}

message UploadImageResponse {
  string id = 1; // image id generated by the server
  uint32 size = 2;
}

service LaptopService  {
  rpc CreateLaptop(CreateLaptopRequest) returns (CreateLaptopResponse) {};
  rpc SearchLaptop(SearchLaptopRequest) returns (stream SearchLaptopResponse) {};
  rpc UploadImage(stream UploadImageRequest) returns (UploadImageResponse) {};
}
